# supikiexe

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  claude-code-sdk-with-windows-ko.md  claude-code-sdk-with-windows.md  eslint.config.js  hi.md  index.html  package-lock.json  package.json  plan.md  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
mascot-mcp/: Cargo.toml
mascot-mcp/src/: main.rs
mcp/: config.json  emotion-server.mjs
scripts/: bundle-sidecar.mjs  create-dev-exe.mjs  sign-exe.mjs
sidecar/: README.md  agent-sidecar.mjs  prompt.txt  supiki_prompt.txt
sidecar/tools/: clipboard.mjs  emotion.mjs  index.mjs  investigateWindow.mjs  screenshot.mjs  system.mjs  time.mjs  window.mjs
src/: App.tsx  ChatWindow.tsx  Clawd.tsx  README.md  bindings.ts  constants.ts  emotions.ts  main.tsx  styles.css  useChatHistory.ts  useMascotState.ts  usePhysics.ts
src-tauri/: Cargo.toml  README.md  prompt.txt  supiki.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: claude_command.rs  claude_runner.rs  codex_command.rs  codex_runner.rs  commands.rs  lib.rs  main.rs  mcp_server.rs  sidecar.rs  state.rs
src-tauri/src/claude/: command.rs  mod.rs  runner.rs
src-tauri/src/codex/: command.rs  mod.rs  runner.rs
src/components/: App.tsx  ChatHistoryListWindow.tsx  ChatInput.tsx  ChatWindow.tsx  Clawd.tsx  ContextMenuWindow.tsx  CwdModal.tsx  MascotApp.tsx  MiniSupikiApp.tsx  QuestionModal.tsx  SettingsWindow.tsx  SupikiApp.tsx
src/components/chat/: ChatInput.tsx
src/components/mascot/: Clawd.tsx  SpeechBubble.tsx  Supiki.tsx
src/components/modals/: CwdModal.tsx  Modal.tsx  QuestionModal.tsx
src/components/windows/: ChatHistoryListWindow.tsx  ChatWindow.tsx  ContextMenuWindow.tsx  CwdWindow.tsx  SettingsWindow.tsx
src/hooks/: useAgentChat.ts  useChatHistory.ts  useChatWindow.ts  useClawdEvents.ts  useContextMenu.ts  useDrag.ts  useMascotEvents.ts  useModalWindow.ts  usePhysics.ts  useSupikiSounds.ts  useTauriEvent.ts  useTimeout.ts
src/i18n/locales/: ko.json
src/services/: agentService.ts  agentTypes.ts  emotionMapper.ts  sessionStorage.ts  settingsStorage.ts
src/styles/: base.css  chat.css  clawd.css  cwdmodal.css  emotions.css  fonts.css  index.css  mascot.css  questionmodal.css  settings.css  states.css  supiki.css  variables.css
src/utils/: id.ts  windowManager.ts
