[package]
name = "mascot-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server for controlling the Clawd desktop mascot"
authors = ["Seunghyun Ji (sorryhyun) <standingbehindnv@gmail.com>"]

[[bin]]
name = "mascot-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.3", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
anyhow = "1.0"
xcap = "0.4"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "webp"] }
