[package]
name = "claude-mascot"
version = "0.1.0"
description = "Claude Desktop Mascot"
authors = ["you"]
edition = "2021"

[lib]
name = "claude_mascot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
specta = { version = "2.0.0-rc.20", features = ["derive"] }
tauri-specta = { version = "2.0.0-rc.20", features = ["typescript"] }
specta-typescript = "0.0.7"
