[package]
name = "claude-mascot"
version = "0.1.0"
description = "Claude Desktop Mascot"
authors = ["Seunghyun Ji (sorryhyun) <standingbehindnv@gmail.com>"]
edition = "2021"
default-run = "claude-mascot"

[lib]
name = "claude_mascot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
base64 = "0.22"
specta = { version = "2.0.0-rc.20", features = ["derive"] }
tauri-specta = { version = "2.0.0-rc.20", features = ["typescript"] }
specta-typescript = "0.0.7"
tokio = { version = "1", features = ["full"] }
rmcp = { version = "0.3", features = ["server", "macros", "transport-io"] }
schemars = "0.8"
anyhow = "1.0"
xcap = "0.4"
image = { version = "0.25", default-features = false, features = ["png", "webp"] }

[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"
windows-core = "0.61"
