[package]
name = "supiki"
version = "0.1.0"
description = "Supiki Desktop Mascot"
authors = ["Seunghyun Ji (sorryhyun) <standingbehindnv@gmail.com>"]
edition = "2021"
default-run = "supiki"

[lib]
name = "supiki_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
base64 = "0.22"
specta = { version = "2.0.0-rc.20", features = ["derive"] }
tauri-specta = { version = "2.0.0-rc.20", features = ["typescript"] }
specta-typescript = "0.0.7"
tokio = { version = "1", features = ["rt", "io-std"] }
rmcp = { version = "0.3", features = ["server", "macros", "transport-io"] }
schemars = "0.8"
anyhow = "1.0"
xcap = "0.8"
image = { version = "0.25", default-features = false, features = ["png", "webp"] }

